// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipient Verification Lists Reducer default 1`] = `
Object {
  "jobResults": Object {},
  "jobResultsLoading": false,
  "latest": null,
  "latestJobLoading": false,
  "singleResults": null,
  "uploadLoading": false,
}
`;

exports[`Recipient Verification Lists Reducer when verification is pending 1`] = `
Object {
  "jobResults": Object {},
  "jobResultsLoading": false,
  "latest": null,
  "latestJobLoading": false,
  "singleResults": null,
  "uploadLoading": false,
}
`;

exports[`Recipient Verification Lists Reducer when verification successfully returns invalid address 1`] = `
Object {
  "jobResults": Object {},
  "jobResultsLoading": false,
  "latest": null,
  "latestJobLoading": false,
  "singleResults": Object {
    "email": "invalid@address.com",
    "is_role": false,
    "reason": "not valid because mx lookup failed",
    "valid": false,
  },
  "uploadLoading": false,
}
`;

exports[`Recipient Verification Lists Reducer when verification successfully returns valid address 1`] = `
Object {
  "jobResults": Object {},
  "jobResultsLoading": false,
  "latest": null,
  "latestJobLoading": false,
  "singleResults": Object {
    "email": "valid@address.com",
    "is_role": false,
    "valid": true,
  },
  "uploadLoading": false,
}
`;
